# privacy-preserving-rag-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-eval.txt  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/documents/: README.md  sample_synthetic_research.md
docker/: entrypoint.sh
docs/: api-reference.md  architecture.md  blog-post.md  deployment.md
src/rag_agent/: __init__.py  agent.py  audit.py  config.py  exceptions.py  ingest.py  logging_config.py  memory.py  privacy.py  tools.py  vectorstore.py
src/rag_agent/api/: __init__.py  main.py
src/rag_agent/api/static/: index.html
src/rag_agent/eval/: __init__.py  __main__.py  dataset.py  harness.py  llm_judge.py  metrics.py
tests/: conftest.py  test_api.py  test_audit.py  test_config.py  test_dp.py  test_eval.py  test_explain.py  test_ingest.py  test_llm_judge.py  test_privacy.py  test_retrieval.py  test_tools.py
