[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-rag-agent"
version = "0.1.0"
description = "Privacy-preserving RAG agent answering research questions with tool-calling over synthetic-only data."
authors = [{ name = "Md Minhazur Rahman", email = "minhazurrahman.ds@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=rag_agent --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires heavy deps (chroma, langchain) and/or network/API keys",
]
